# nuvolaris-operator-ng

./: .env.dist  .gitignore  .gitmodules  DESIGN.md  README.md  TODO.txt  Taskfile.yml  aliases  profile.ipy  pyproject.toml
core/: README.md  pyproject.toml
image/: Dockerfile  Taskfile.yml  build-standalone.bash
olaris-ng/: nuvfile.yml
olaris-ng/kubernetes/: nuvfile.yml
olaris-ng/nuvolaris/: nuvfile.yml
